<resources>
    <string name="app_name">HandyApp</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_chat">Chats</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_reports">Reports</string>
    <string name="title_settings">Settings</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="navigate">Navigate</string>
    <string name="title_job_details">Job Details</string>
    <string name="end_job">End Job</string>
    <string name="error_checkin">Error!</string>
    <string name="start_job">Start Job</string>
    <string name="voice_recording">Voice Recording [ %1$s ]</string>
</resources>