<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.makeathon.handyapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_jobs"
        android:name="com.makeathon.handyapp.ui.jobs.JobsListFragment"
        android:label="@string/title_jobs"
        tools:layout="@layout/fragment_jobs" >

        <action
            android:id="@+id/action_jobs_to_job_details"
            app:destination="@id/navigation_job_details" />

    </fragment>

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.makeathon.handyapp.ui.chat.ChatsListFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.makeathon.handyapp.ui.reports.ReportsListFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.makeathon.handyapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_job_details"
        android:name="com.makeathon.handyapp.ui.jobs.JobDetailsFragment"
        android:label="@string/title_job_details"
        tools:layout="@layout/fragment_job_details" />

</navigation>